# string

./: README.markdown  string.cabal
src/Data/String/: Util.hs
test/: doctests.hs
test/Data/String/: UtilSpec.hs
